crates/harness-monitor/src/ui/snapshots/harness_monitor__ui__tui__tests__routa_watch_tui_file_preview.snap
---
source: crates/harness-monitor/src/ui/tests.rs
assertion_line: 1141
expression: "render_snapshot(&state, &mut cache, 120, 24)"
---
routa.js  2 dirty  1 unassigned  lines: --  loc: --  fitness: fast  transport: socket
┌Git Status  +38 -17─────────────────────────────────────────────────────────────────┐┌File Preview────────────────────┐
│ 2 files, 0 untracked, 5 commits, 1 agent, branch: main, 2 worktrees                ││ 1 fn render(frame: &mut Frame) │
│────────────────────────────────────────────────────────────────────────────────────││{                               │
│> crates/harness-monitor/src/tui.rs                        M  +38 -5 TM changed   4m││ 2     // preview               │
│  src/app/api/a2a/card/route.ts                               D     -12 TM miss   5m││ 3 }                            │
│                                                                                    ││                                │
│                                                                                    ││                                │
│                                                                                    ││                                │
│                                                                                    ││                                │
│                                                                                    ││                                │
│                                                                                    ││                                │
│                                                                                    ││                                │
└────────────────────────────────────────────────────────────────────────────────────┘└────────────────────────────────┘
┌Fitness (Entrix Fast) - PASS 91.0% (0/12) 4200ms────────────────────────────────────┐┌File Detail─────────────────────┐
│Dimension scores:                                                                   ││tui.rs                          │
│92% code_quality           w18  4/4  ██████████████████████████░░                   ││crates/harness-monitor/src      │
│95% api_contract           w10  2/2  ███████████████████████████░                   ││Task: ...onitor task journey    │
│                                                                                    ││Lines: ...  Size: ...  Git      │
│                                                                                    ││changes: ...                    │
│                                                                                    ││Test mapping: changed  rust     │
│                                                                                    ││Resolver: hybrid_heuristic      │
└────────────────────────────────────────────────────────────────────────────────────┘└────────────────────────────────┘
Tab Runs/Sessions/Files/Detail/Fitness  ↑↓ select  S run sort  v run filter  u unassigned  d preview/diff  Pg scroll  f
