crates/harness-monitor/src/ui/snapshots/harness_monitor__ui__tui__tests__routa_watch_tui_search.snap
---
source: crates/harness-monitor/src/ui/tests.rs
assertion_line: 1129
expression: "render_snapshot(&state, &mut cache, 120, 24)"
---
routa.js  1 dirty  1 unassigned  lines: --  loc: --  fitness: fast  transport: socket
┌Git Status  +0 -12──────────────────────────────────────────────────────────────────┐┌Diff Preview────────────────────┐
│ 1 file, 0 untracked, 5 commits, 1 agent, branch: main, 2 worktrees                 ││@@ -1,2 +1,3 @@                 │
│────────────────────────────────────────────────────────────────────────────────────││-use old                        │
│> src/app/api/a2a/card/route.ts                               D     -12 TM miss   5m││+use new                        │
│                                                                                    ││+use cache                      │
│                                                                                    ││                                │
│                                                                                    ││                                │
│                                                                                    ││                                │
│                                                                                    ││                                │
│                                                                                    ││                                │
│                                                                                    ││                                │
│                                                                                    ││                                │
└────────────────────────────────────────────────────────────────────────────────────┘└────────────────────────────────┘
┌Fitness (Entrix Fast) - PASS 91.0% (0/12) 4200ms────────────────────────────────────┐┌File Detail─────────────────────┐
│Dimension scores:                                                                   ││route.ts                        │
│92% code_quality           w18  4/4  ██████████████████████████░░                   ││src/app/api/a2a/card            │
│95% api_contract           w10  2/2  ███████████████████████████░                   ││Lines: ...  Size: ...  Git      │
│                                                                                    ││changes: ...                    │
│                                                                                    ││Test mapping: missing           │
│                                                                                    ││typescript                      │
│                                                                                    ││Resolver: path_heuristic        │
└────────────────────────────────────────────────────────────────────────────────────┘└────────────────────────────────┘
Tab Runs/Sessions/Files/Detail/Fitness  ↑↓ select  S run sort  v run filter  u unassigned  d preview/diff  Pg scroll  f
