crates/harness-monitor/src/ui/snapshots/harness_monitor__ui__tui__tests__routa_watch_tui_summary.snap
---
source: crates/harness-monitor/src/ui/tests.rs
assertion_line: 707
expression: "render_snapshot(&state, &mut cache, 120, 28)"
---
routa.js  2 dirty  1 unassigned  lines: --  loc: --  fitness: fast  transport: socket
┌Git Status  +38 -17─────────────────────────────────────────────────────────────────┐┌Diff Preview────────────────────┐
│ 2 files, 0 untracked, 5 commits, 1 agent, branch: main, 2 worktrees                ││@@ -1,2 +1,3 @@                 │
│────────────────────────────────────────────────────────────────────────────────────││-use old                        │
│> crates/harness-monitor/src/tui.rs                        M  +38 -5 TM changed   4m││+use new                        │
│  src/app/api/a2a/card/route.ts                               D     -12 TM miss   5m││+use cache                      │
│                                                                                    ││                                │
│                                                                                    ││                                │
│                                                                                    ││                                │
│                                                                                    ││                                │
│                                                                                    ││                                │
│                                                                                    ││                                │
│                                                                                    ││                                │
│                                                                                    ││                                │
│                                                                                    ││                                │
│                                                                                    ││                                │
└────────────────────────────────────────────────────────────────────────────────────┘└────────────────────────────────┘
┌Fitness (Entrix Fast) - PASS 91.0% (0/12) 4200ms────────────────────────────────────┐┌File Detail─────────────────────┐
│Dimension scores:                                                                   ││tui.rs                          │
│92% code_quality           w18  4/4  ██████████████████████████░░                   ││crates/harness-monitor/src      │
│95% api_contract           w10  2/2  ███████████████████████████░                   ││Task: ...onitor task journey    │
│                                                                                    ││Lines: ...  Size: ...  Git      │
│                                                                                    ││changes: ...                    │
│                                                                                    ││Test mapping: changed  rust     │
│                                                                                    ││Resolver: hybrid_heuristic      │
│                                                                                    ││Confidence: medium              │
└────────────────────────────────────────────────────────────────────────────────────┘└────────────────────────────────┘
Tab Runs/Sessions/Files/Detail/Fitness  ↑↓ select  S run sort  v run filter  u unassigned  d preview/diff  Pg scroll  f
